--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<header class="col-right">
 			<br><br><br><br>
 			
-	<h1 class="title">ELECTRONIC VOTING SYSTEM</h1>
+	<h1 class="title">NIT ELECTRONIC VOTING SYSTEM</h1>
 			
 			
 		</header>
